# elo_ranking_test

./: CMakeLists.txt  MainApplication.cpp  MainApplication.hpp  MainTreeView.cpp  MainTreeView.hpp  MainWindow.hpp  Makefile  NewPlayerWindow.cpp  Player.cpp  Player.hpp  README.md  elo_rank  list.c  main.c  main.cpp  main.h  rank.c  test.txt
gui/: Makefile  main.hpp  main_window.cpp  new_player_window.cpp  test.c  test.cpp  test_gui
header/: NewPlayerWindow.hpp  Player.hpp
include/: main.h  rank.h
source/: CMakeLists.txt  MainWindow.cpp  Player.cpp
utils/: my_putchar_putstr.c  my_strcmp.c
